# investment-signals

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  THIRD_PARTY_NOTICES.md  docker-compose.yml  mkdocs.yml  pyproject.toml
conf/: detectors.overrides.yaml  detectors.yaml  instruments.yaml
docs/: architecture.md  detectors.md  index.md  openapi.md
docs/reference/: config.md  detector_core.md  instruments.md  models.md  overview.md  services.md  sinks.md
sql/postgres/init/: 001_market_signals.sql
src/tinvest_signal_engine/: __init__.py  config.py  desktop_notifications.py  detector_core.py  instruments.py  logging_utils.py  models.py  serialization.py  sinks.py
src/tinvest_signal_engine/services/: __init__.py  api.py  detector_service.py  ingestor.py  local_notifier.py  threshold_cron.py
tests/: test_detector.py
