[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tinvest-signal-engine"
version = "0.1.0"
description = "Realtime anomaly detection pipeline for T-Invest market data."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "cachetools",
  "deprecation",
  "fastapi",
  "grpcio>=1.39.0",
  "httpx",
  "kafka-python-ng",
  "psycopg[binary]>=3.2",
  "protobuf>=4.21.6,<6",
  "python-dateutil",
  "pyyaml",
  "uvicorn[standard]",
]

[project.scripts]
tinvest-raw-stream = "tinvest_signal_engine.services.ingestor:main"
tinvest-detector = "tinvest_signal_engine.services.detector_service:main"
tinvest-api = "tinvest_signal_engine.services.api:main"
tinvest-local-notifier = "tinvest_signal_engine.services.local_notifier:main"
tinvest-threshold-cron = "tinvest_signal_engine.services.threshold_cron:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
  "mkdocstrings[python]>=0.26",
]
